--- a/locale/messages.pot
+++ b/locale/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-26 15:48+0100\n"
+"POT-Creation-Date: 2013-11-30 15:32+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,18 +23,18 @@ msgid "OpenUDC project"
 msgstr ""
 
 #: text/0_conf.php:4
-msgid "OpenUDC"
+msgid "The OpenUDC free money"
 msgstr ""
 
 #: text/0_conf.php:5
-msgid "monnaie,free money,universal dividend money system"
+msgid "money,free money,digital money,universal dividend money,bitcoin"
 msgstr ""
 
 #: text/0.php:6
 #, php-format
 msgid ""
 "OpenUDC is a set of free softwares designed to create a free money system "
-"based on a decentralised human P2P network."
+"based on a decentralized human P2P network."
 msgstr ""
 
 #: text/0.php:9
@@ -80,8 +80,8 @@ msgstr ""
 #: text/0.php:26
 #, php-format
 msgid ""
-"OpenUDC allow each community who want to use it's own free money to describe "
-"it's own Universal Dividend set of rules."
+"OpenUDC allow each community who want to use its own free money to describe "
+"its own Universal Dividend set of rules."
 msgstr ""
 
 #: text/0.php:29
@@ -106,15 +106,15 @@ msgstr ""
 #, php-format
 msgid ""
 "A new member entering the money system has to be signed by a determined "
-"(paramater of the money system) number of existing members. A member yet "
-"existing in the money system has to renew periodicly signing in a period of "
-"time (other parameter of the money system), as a renewable proof of life. "
+"(parameter of the money system) number of existing members. A member yet "
+"existing in the money system has to renew periodically signing in a period "
+"of time (other parameter of the money system), as a renewable proof of life. "
 msgstr ""
 
 #: text/0.php:40
 #, php-format
 msgid ""
-"So there is no center, no centralised organism in an OpenUDC money system."
+"So there is no center, no centralized organism in an OpenUDC money system."
 msgstr ""
 
 #: text/0.php:43
@@ -126,10 +126,10 @@ msgstr ""
 #, php-format
 msgid ""
 "Exchanges are made directly from person to person in \"digital coins\". The "
-"sender announce to the system the amount and and the receiver, he signs it, "
-"and then send it to one node. The node makes a propagation of the "
-"information, and when the whole system fully validate the transaction, the "
-"receiver has the information."
+"sender announce to the system the amount and the receiver, he signs it, and "
+"then send it to one node. The node makes a propagation of the information, "
+"and when the whole system fully validate the transaction, the receiver has "
+"the information."
 msgstr ""
 
 #: text/0.php:48 text/0.php:85
@@ -146,10 +146,10 @@ msgstr ""
 #, php-format
 msgid ""
 "A node is an instance of OpenUDC software, connected to other nodes. All "
-"thoses P2P connected nodes know the OpenUDC Web of Trust, and share the same "
-"database in a synchronised way. So the database itself is a P2P shared "
+"those P2P connected nodes know the OpenUDC Web of Trust, and share the same "
+"database in a synchronized way. So the database itself is a P2P shared "
 "database containing the whole Monetary Mass. So each member of an OpenUDC "
-"money system canhave it's own node and own copy of the updated OpenUDC Web "
+"money system can have its own node and own copy of the updated OpenUDC Web "
 "of Trust and OpenUDC Monetary Mass. "
 msgstr ""
 
@@ -176,7 +176,7 @@ msgid ""
 "base of that unit creation), and of course the up-to-date owner of that "
 "coin. These digital coins are technically available in different sizes as "
 "powers of 2 : 2^0, or 2^1, or 2^2, 2^3 etc... This choice is due to "
-"optimisation of memory space, and also due to growing quantitative monetary "
+"optimization of memory space, and also due to growing quantitative monetary "
 "mass. "
 msgstr ""
 
@@ -184,8 +184,8 @@ msgstr ""
 #, php-format
 msgid ""
 "Note1 : OpenUDC system has to show always the information on a relative "
-"units, so quantative units can be seen only for technical base. On it's own "
-"account a member has a number a quantitive units Q, he can count on number "
+"units, so quantitative units can be seen only for technical base. On its own "
+"account a member has a number a quantitative units Q, he can count on number "
 "of Universal Dividend making the calculation account : Q / UD."
 msgstr ""
 
@@ -216,7 +216,7 @@ msgstr ""
 msgid ""
 "To obtain an account, it is enough to create it, and then to be signed by a "
 "determined number of existing members. Account will be activated only when "
-"the system rules will be fully ok.Practically you create an OpenUDC WoT "
+"the system rules will be fully OK. Practically you create an OpenUDC WoT "
 "private key, and an OpenUDC WoT public key, associated with a specific "
 "OpenUDC information named UDID2 information. "
 msgstr ""
@@ -226,7 +226,7 @@ msgstr ""
 msgid ""
 "With those keys you can access to transactions of your own account, send to "
 "or receive from others. You sign and encrypt a \"digital order\" to send, "
-"and then the node recognise you, and make the job. When it's fully ok, the "
+"and then the node recognise you, and make the job. When it's fully OK, the "
 "receiver has the complete information and some digital coins have change of "
 "owner. Work of the nodes When a node receive an encrypted \"digital order\" "
 "it recognised the sender, and he is able to decrypt it and work on it. The "
@@ -266,7 +266,7 @@ msgstr ""
 msgid "install,openUDC,free money"
 msgstr ""
 
-#: text/1.php:3 text/1.php:65
+#: text/1.php:3 text/1.php:65 conf/menu.php:12 conf/top-bar.php:20
 #, php-format
 msgid "Install"
 msgstr ""
@@ -278,7 +278,7 @@ msgstr ""
 
 #: text/1.php:12
 #, php-format
-msgid "Install Lud: OpenUDC Client"
+msgid "Install Lud: OpenUDC command line client"
 msgstr ""
 
 #: text/1.php:15 text/1.php:59
@@ -300,13 +300,12 @@ msgstr ""
 #, php-format
 msgid ""
 "It asks you informations (place of birth, date of birth, last name, first "
-"name) in order to generate a UDID2 certificate needed to be with you unique "
-"OpenGPG/OpenUDC key ID."
+"name) in order to generate a unique ID for your key."
 msgstr ""
 
 #: text/1.php:40
 #, php-format
-msgid "When your certificate is generated, it shows a menu. "
+msgid "When your key is generated, it shows a menu. "
 msgstr ""
 
 #: text/1.php:43
@@ -316,9 +315,7 @@ msgstr ""
 
 #: text/1.php:47
 #, php-format
-msgid ""
-"Launching the program \"seahorse\" you can check your unique UDID2-OpenUDC "
-"key is on the window \"My personals keys\". "
+msgid "Launching the program \"seahorse\" you can see your key."
 msgstr ""
 
 #: text/1.php:50
@@ -348,13 +345,6 @@ msgid ""
 "your OpenUDC LUDD node "
 msgstr ""
 
-#: text/1.php:98
-#, php-format
-msgid ""
-"You can always retrying the process of compiling / installing with the "
-"commands :"
-msgstr ""
-
 #: text/2_conf.php:3 text/2.php:3
 #, php-format
 msgid "Contribute to OpenUDC"
@@ -365,15 +355,16 @@ msgid "How to contribute to OpenUDC"
 msgstr ""
 
 #: text/2_conf.php:5
-msgid "contribute,developer"
+msgid ""
+"contribute,contributor,open-source,github,developer,develop,program,"
+"programmer"
 msgstr ""
 
 #: text/2.php:6
 #, php-format
 msgid ""
 "The project is still young, we need a lot of contributors for improving it. "
-"Feel free to join our developer and user community in using the following "
-"ways."
+"Feel free to join our developer and user community."
 msgstr ""
 
 #: text/2.php:9
@@ -457,23 +448,8 @@ msgstr ""
 
 #: text/3.php:30
 #, php-format
-msgid "using the Jabber compatible web-client Jappix;"
-msgstr ""
-
-#: text/3.php:33
-#, php-format
-msgid "using MiniJappix on your own site;"
-msgstr ""
-
-#: text/3.php:36
-#, php-format
-msgid "install and use a free XMPP client (probably the best way)."
-msgstr ""
-
-#: text/3.php:40
-#, php-format
 msgid ""
-"Recommended XMPP clients: <a href=\"http://gajim.org/\">Gajim</a>, <a href="
+"use a XMPP client like <a href=\"http://gajim.org/\">Gajim</a> or <a href="
 "\"http://psi-plus.com/\">PSI+</a>."
 msgstr ""
 
@@ -481,7 +457,7 @@ msgstr ""
 msgid "FAQ OpenUDC"
 msgstr ""
 
-#: text/4_conf.php:4 text/4.php:3
+#: text/4_conf.php:4 text/4.php:4
 #, php-format
 msgid "Frequently asked questions"
 msgstr ""
@@ -490,42 +466,42 @@ msgstr ""
 msgid "faq,developer,contact"
 msgstr ""
 
-#: text/4.php:6
+#: text/4.php:7
 #, php-format
 msgid "What are the step needed to join an Open-UDC community ?"
 msgstr ""
 
-#: text/4.php:10
+#: text/4.php:11
 #, php-format
 msgid ""
-"Create a OpenPGP key with an UDID2 OpenUDC comment. (see GLUD at <a href ="
-"\"http://node1.openudc.org:11371/udid2/\" >http://node1.openudc.org:11371/"
-"udid2/</a> )"
+"Create a OpenPGP key with the Open-UDC command line client. Also you can use "
+"\"gpg\" with a special <a href =\"http://node1.openudc.org:11371/udid2/\" "
+">OpenUDC UDID2</a>."
 msgstr ""
 
-#: text/4.php:13
+#: text/4.php:14
 #, php-format
 msgid ""
 "Your key must be signed by 5 or more known yet registered users within the "
 "community (at least enough to be valid with GnuPG's default criteria)"
 msgstr ""
 
-#: text/4.php:16
+#: text/4.php:17
 #, php-format
 msgid "You learn to use LUD or GLUD client to connect to a LUDD node."
 msgstr ""
 
-#: text/4.php:19
+#: text/4.php:20
 #, php-format
 msgid "You are in."
 msgstr ""
 
-#: text/4.php:23
+#: text/4.php:24
 #, php-format
 msgid "What mean M, N, c in OpenUDC concepts ?"
 msgstr ""
 
-#: text/4.php:26
+#: text/4.php:27
 #, php-format
 msgid ""
 "M or M(t) means the whole monetary Mass, the sum of all unit coins within "
@@ -535,45 +511,45 @@ msgid ""
 "&#37; per month)."
 msgstr ""
 
-#: text/4.php:29
+#: text/4.php:30
 #, php-format
 msgid "What are LUD, GLUD, LUDD, UDID2 ?"
 msgstr ""
 
-#: text/4.php:33
+#: text/4.php:34
 #, php-format
 msgid "LUDD is the free software that run an OpenUDC P2P node."
 msgstr ""
 
-#: text/4.php:36
+#: text/4.php:37
 #, php-format
 msgid ""
-"LUD is the free software OpenUDC standard client. LUD means \"LUD Universal "
-"Dividend\" able to connect to a LUDD node. You must install LUD on your own "
-"machine."
+"LUD is the free software OpenUDC standard command line client. LUD means "
+"\"LUD Universal Dividend\" able to connect to a LUDD node. You must install "
+"LUD on your own machine."
 msgstr ""
 
-#: text/4.php:39
+#: text/4.php:40
 #, php-format
 msgid ""
 "GLUD is a graphical web interface for LUD with a development version here : "
 "http://node1.openudc.org:11371/udid2/ "
 msgstr ""
 
-#: text/4.php:42
+#: text/4.php:43
 #, php-format
 msgid ""
 "UDID2 is OpenUDC information needed to add to OpenPGP keys to become "
 "candidate to OpenUDC PGP keys. (see more information in technical "
-"specficications for developpers)."
+"specifications for developers)."
 msgstr ""
 
-#: text/4.php:46
+#: text/4.php:47
 #, php-format
 msgid "What are the rules of OpenUDC Universal Dividend creation ?"
 msgstr ""
 
-#: text/4.php:49
+#: text/4.php:50
 #, php-format
 msgid ""
 "The rules (for the development standard) are defined as a time function "
@@ -583,17 +559,17 @@ msgid ""
 "long term growth."
 msgstr ""
 
-#: text/4.php:53
+#: text/4.php:54
 #, php-format
 msgid "UD(0) = 100 Q "
 msgstr ""
 
-#: text/4.php:56
+#: text/4.php:57
 #, php-format
 msgid "UD(t+1) = MAX [UD(t) ; c*M(t)/N(t)]"
 msgstr ""
 
-#: text/4.php:60
+#: text/4.php:61
 #, php-format
 msgid ""
 "Where \"t\" is the past month. UD(t) is the UD of past month. \"c\" is the "
@@ -602,12 +578,12 @@ msgid ""
 "before calculation of new monthly UD(t+1):"
 msgstr ""
 
-#: text/4.php:64
+#: text/4.php:65
 #, php-format
 msgid "c = ln(ev:2) / (ev:2)"
 msgstr ""
 
-#: text/4.php:68
+#: text/4.php:69
 #, php-format
 msgid ""
 "c is defined here as the quantitative average monetary mass growth based on "
@@ -615,12 +591,12 @@ msgid ""
 "have:"
 msgstr ""
 
-#: text/4.php:72
+#: text/4.php:73
 #, php-format
 msgid "c = ln(40) / 40 = 9&#37; / year."
 msgstr ""
 
-#: text/4.php:76
+#: text/4.php:77
 #, php-format
 msgid ""
 "As those rules are parameters of OpenUDC, one community can use OpenUDC with "
@@ -628,43 +604,59 @@ msgid ""
 "money community. "
 msgstr ""
 
-#: text/4.php:79
+#: text/4.php:80
 #, php-format
 msgid ""
 "Why OpenUDC contributors say \"there is no inflation\" since we have a "
 "Monetary growth ?"
 msgstr ""
 
-#: text/4.php:82
+#: text/4.php:83
 #, php-format
 msgid ""
-"Because inflation is a false conclusion due to ignorance relativaly to a bad "
+"Because inflation is a false conclusion due to ignorance relatively to a bad "
 "unit of money because the Quantative units of money growth due to Universal "
 "Dividend is not the Relative one."
 msgstr ""
 
-#: text/4.php:85
+#: text/4.php:86
 #, php-format
 msgid ""
 "An OpenUDC community use the relative unit 1 UD, and not the quantitative 1 "
 "Q. So there is still in the money system the same number of money units N / "
 "c UD. And then the number of UD money units only depend of the number of "
-"members, and the average amount of money per member is always fix or limited "
-"by 1 / c UD."
+"members, and the average amount of money per member is always fixed or "
+"limited by 1 / c UD."
 msgstr ""
 
-#: text/4.php:88
+#: text/4.php:89
 #, php-format
 msgid ""
 "So inflation is not a problem in Universal Dividend money system, because "
-"there is Quantitave creation but not Relative money creation and we count in "
-"number of Universal Dividend, the Relative Unit. "
+"there is Quantitative creation but not Relative money creation and we count "
+"in number of Universal Dividend, the Relative Unit. "
 msgstr ""
 
-#: text/4.php:91
+#: text/4.php:92
 #, php-format
 msgid ""
 "Inflation is only a problem in non-free money system when some individuals "
 "create money for their own benefit and to the detriment of others, and so "
 "the problem is due to that non-free money model."
+msgstr ""
+
+#: conf/menu.php:11 conf/top-bar.php:19
+msgid "Project"
+msgstr ""
+
+#: conf/menu.php:13 conf/top-bar.php:21
+msgid "Contribute"
+msgstr ""
+
+#: conf/menu.php:14 conf/top-bar.php:22
+msgid "Contact"
+msgstr ""
+
+#: conf/menu.php:15 conf/top-bar.php:23
+msgid "FAQ"
 msgstr ""
