--- a/site0.lyx
+++ b/site0.lyx
@@ -80,11 +80,7 @@ Pierro
 \end_layout
 
 \begin_layout Section
-Project1
-\end_layout
-
-\begin_layout Subsection
-OpenUDC project
+Project
 \end_layout
 
 \begin_layout Verse
@@ -96,221 +92,309 @@ keywords=monnaie,free money,universal dividend money system
 \end_layout
 
 \begin_layout Standard
-OpenUDC is a set of free softwares designed to create a free money system
- based on a decentralised human P2P network.
+Tous les textes sont dans un fichier LyX: <a href="http://pierro.tk/openudc/udc/s
+ite.lyx">http://pierro.tk/openudc/udc/site.lyx</a>.
 \end_layout
 
 \begin_layout Standard
-The softwares are under <a title="WikiPedia" href="http://en.wikipedia.org/wiki/AG
-PL">AGPL</a> et <a title="WikiPedia" href="http://en.wikipedia.org/wiki/LGPL">LGPL
-</a>.
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("Convergence of skills OpenUDC"));
-\end_layout
-
-\begin_layout Quotation
-get_image_in_langage("graph/all_jobs","svg","100%", $coment);
-\end_layout
-
-\begin_layout Subsubsection
-Free Money system
-\end_layout
-
-\begin_layout Standard
-The OpenUDC softwares are designed to manage a free money system as described
- by the TRM (Théorie Relative de la Monnaie), that means a money system
- where no human has privileges in front of money creation either in time
- or in space.
-\end_layout
-
-\begin_layout Standard
-These money systems solutions are Universal Dividend based money systems.
- Every member in the community create (equal to receive) the same Universal
- Dividend per period of time.
- 
-\end_layout
-
-\begin_layout Standard
-OpenUDC development chosen rule is described in the FAQ.
-\end_layout
-
-\begin_layout Standard
-OpenUDC allow each community who want to use it's own free money to describe
- it's own Universal Dividend set of rules.
-\end_layout
-
-\begin_layout Subsubsection
-Human P2P network
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("A web of trust in a human community"));
-\end_layout
-
-\begin_layout Quotation
-get_image("graph/mens","svg","80%",$coment );
-\end_layout
-
-\begin_layout Standard
-The openUDC human P2P network is based on <a href="http://en.wikipedia.org/wiki/Op
-enPGP">OpenPGP</a>.
- There is an OpenPGP Web of Trust which identify the members of one OpenUDC
- community sharing the same free money.
-\end_layout
-
-\begin_layout Standard
-A new member entering the money system has to be signed by a determined
- (paramater of the money system) number of existing members.
- A member yet existing in the money system has to renew periodicly signing
- in a period of time (other parameter of the money system), as a renewable
- proof of life.
- 
-\end_layout
-
-\begin_layout Standard
-So there is no center, no centralised organism in an OpenUDC money system.
-\end_layout
-
-\begin_layout Subsubsection
-Exchanges
-\end_layout
-
-\begin_layout Standard
-Exchanges are made directly from person to person in "digital coins".
- The sender announce to the system the amount and and the receiver, he signs
- it, and then send it to one node.
- The node makes a propagation of the information, and when the whole system
- fully validate the transaction, the receiver has the information.
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("A gives money to B (mode1 transaction)"));
-\end_layout
-
-\begin_layout Quotation
-get_image_in_langage("graph/pay1","svg","80%",$coment );
-\end_layout
-
-\begin_layout Subsubsection
-OpenUDC nodes
-\end_layout
-
-\begin_layout Standard
-A node is an instance of OpenUDC software, connected to other nodes.
- All thoses P2P connected nodes know the OpenUDC Web of Trust, and share
- the same database in a synchronised way.
- So the database itself is a P2P shared database containing the whole Monetary
- Mass.
- So each member of an OpenUDC money system canhave it's own node and own
- copy of the updated OpenUDC Web of Trust and OpenUDC Monetary Mass.
- 
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("A Network nodes"));
-\end_layout
-
-\begin_layout Quotation
-get_image("graph/node","svg","80%",$coment );
+Pour voir le fichier de traduction fr vite fait <a href="http://pierro.tk/openudc
+/udc/locale/fr_FR/LC_MESSAGES/message.po">http://pierro.tk/openudc/udc/locale/fr_F
+R/LC_MESSAGES/message.po</a>.
 \end_layout
 
 \begin_layout Subsection
-Technical choices 
-\end_layout
-
-\begin_layout Subsubsection
-Digital coins 
+Le projet OpenUDC
 \end_layout
 
 \begin_layout Standard
-Each digital coin is identified in an unique way.
- It contains the information of it's date of creation, creation owner (the
- member who was the base of that unit creation), and of course the up-to-date
- owner of that coin.
- These digital coins are technically available in different sizes as powers
- of 2 : 2^0, or 2^1, or 2^2, 2^3 etc...
- This choice is due to optimisation of memory space, and also due to growing
- quantitative monetary mass.
+(textes en français à discuter, à traduire plus tard si courageux ou plus
+ doué que moi en anglais)
+\end_layout
+
+\begin_layout Standard
+OpenUDC est un ensemble d'outils destinés à faciliter la mise en oeuvre
+ d'une monnaie libre: monnaie locale, associative, complémentaire, de substituti
+on.
  
 \end_layout
 
 \begin_layout Standard
-Note1 : OpenUDC system has to show always the information on a relative
- units, so quantative units can be seen only for technical base.
- On it's own account a member has a number a quantitive units Q, he can
- count on number of Universal Dividend making the calculation account :
- Q / UD.
+Les outils vont de la synthèse des théories monétaires aux moyens de payements.
 \end_layout
 
 \begin_layout Standard
-In relative units the monetary Mass don't move in number of UD units, there
- is always a maximum average of 1 / c Universal Dividend per member, so
- in the relative unit UD there is no monetary growth.
+Chaque élément peut être utilisé librement et gratuitement.
+ Les documents et logiciel sont sous licence libre <a title="WikiPedia"
+ href="http://en.wikipedia.org/wiki/AGPL">AGPL</a> et <a title="WikiPedia"
+ href="http://en.wikipedia.org/wiki/LGPL">LGPL</a>.
 \end_layout
 
 \begin_layout Standard
-Note2 : The OpenUDC digital coins are all in the P2P shared database, and
- so there is no possibility for those coins to be lost (you could lose your
- private OpenUDC Web of Trust Key, but that problem can be solved by other
- ways than the OpenUDC system itself).
- 
+OpenUDC est encore au stade de développement.
+\end_layout
+
+\begin_layout Quotation
+get_image_in_langage("src/all_jobs","svg","80%","Convergence de compétences
+ OpenUDC");
 \end_layout
 
 \begin_layout Subsubsection
-Accounts are "keys"
+Monnaie
 \end_layout
 
 \begin_layout Standard
-To obtain an account, it is enough to create it, and then to be signed by
- a determined number of existing members.
- Account will be activated only when the system rules will be fully ok.Practicall
-y you create an OpenUDC WoT private key, and an OpenUDC WoT public key,
- associated with a specific OpenUDC information named UDID2 information.
+La monnaie est un protocole d'échange économique basé sur la confiance,
+ elle est au service de l'économie et donc de chaque homme qui la compose.
+\end_layout
+
+\begin_layout Subsubsection
+Monnaie libre
+\end_layout
+
+\begin_layout Standard
+On parle de monnaie libre:
+\end_layout
+
+\begin_layout Itemize
+lorsque la monnaie est au service de l'économie et de chaque être humain
+ qui la compose;
+\end_layout
+
+\begin_layout Itemize
+lorsque la monnaie est pensée pour fonctionner à long terme et dans un souci
+ d'égalité entre les hommes et les générations;
+\end_layout
+
+\begin_layout Itemize
+lorsque les règles de création et de gestion de la monnaie sont publiques
+ et transparentes;
+\end_layout
+
+\begin_layout Itemize
+lorsque chaque usager a les moyens de vérifier que la monnaie fonctionne
+ conformément aux règles annoncées;
+\end_layout
+
+\begin_layout Itemize
+lorsque les décisions éventuelles concernant la monnaie sont prises par
+ l'ensemble des usagers directement et à poids égal.
+\end_layout
+
+\begin_layout Subsection
+Principes d'OpenUDC
+\end_layout
+
+\begin_layout Standard
+Les éléments qui composent une économie sont les hommes.
+ Ce n'est pas seulement une conviction, c'est avant tout du réalisme.
+ Un système monétaire qui ne servirait pas l'ensemble des hommes ne servirait
+ pas l'économie.
+ Il serait donc hors sujet et donc prompt à collapser ou à dériver.
  
 \end_layout
 
 \begin_layout Standard
-With those keys you can access to transactions of your own account, send
- to or receive from others.
- You sign and encrypt a "digital order" to send, and then the node recognise
- you, and make the job.
- When it's fully ok, the receiver has the complete information and some
- digital coins have change of owner.
- Work of the nodes When a node receive an encrypted "digital order" it recognise
-d the sender, and he is able to decrypt it and work on it.
- The node makes verifications that the sender is the owner of each digital
- coins of the digital order.
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("A gives money to B (mode1 transaction)"));
-\end_layout
-
-\begin_layout Quotation
-get_image_in_langage("graph/pay1","svg","80%",$coment );
-\end_layout
-
-\begin_layout Quotation
-$coment=sprintf(_("A gives money to B (mode2 transaction)"));
-\end_layout
-
-\begin_layout Quotation
-get_image_in_langage("graph/pay2","svg","80%",$coment );
+OpenUDC est donc tout naturellement pensé autour de l'humain.
 \end_layout
 
 \begin_layout Subsubsection
-Communication between nodes
+L'humain
+\end_layout
+
+\begin_layout LyX-Code
+<div class="polaroid align-center"><object data="graph/mens.svg" width="80%"
+ type="image/svg+xml"></object><div class="fig_comment">Une toile de confiance
+ dans une communauté humaine</div></div>
 \end_layout
 
 \begin_layout Standard
-When a node collect a transaction, it informs immediately two other nodes.
- Then these others nodes inform two other nodes and so on.
- It's an exponential speed.
- Each node know before the nodes it has to inform.
- When a new node connect or disconnect to the system, new communication
- rules are automatically calculated.
+Je connais telle personne et je lui fais confiance, cette personne en connaît
+ une autre, et ainsi de suite.
+ Cette toile de confiance est naturelle dans les communautés humaines.
+ OpenUDC s'appuie sur cette dernière et la matérialise à l'aide d'outils
+ informatiques conçus pour cela comme <a href="http://en.wikipedia.org/wiki/OpenPG
+P">OpenPGP</a>.
+ Dès que je suis reconnu par une autre personne, je peux utiliser la monnaie.
+ Cette toile de confiance représente l'étendu de la zone monétaire et la
+ supporte.
+\end_layout
+
+\begin_layout Standard
+Grâce à cette méthode la zone monétaire peux s'étendre ou se réduire d'elle-même.
+ Il suffit de fixer les règles au départ pour que cela fonctionne naturellement.
+ C'est une solution idéale quelle que soit la taille du système: depuis
+ quelques usagers à plusieurs dizaines de millions.
+ Il n'est pas nécessaire de gérer les usagers de manière centralisée ce
+ qui élimine le risque d'être dépassé ou submergé par les évolutions.
+\end_layout
+
+\begin_layout Subsubsection
+Les échanges
+\end_layout
+
+\begin_layout Standard
+Ensuite les échanges se font directement de personne à personne en "pièces
+ numériques".
+ L'acheteur annonce qu'il veut verser un montant à une personne, il signe
+ sa demande puis il l'envoie vers un nœud (voir plus bas).
+ Après validation le destinataire est informé.
+ Un autre mode de payement sera décrit plus loin.
+\end_layout
+
+\begin_layout Quotation
+get_image_in_langage("graph/pay1","svg","80%",printf(_("A gives money to
+ B (mode1 transaction)")) );
+\end_layout
+
+\begin_layout Subsubsection
+Les nœuds
+\end_layout
+
+\begin_layout Standard
+Un nœud est un ordinateur capable de valider ou non la transaction.
+ Il vérifie que la personne qui effectue le payement possède bien les pièces
+ en question, puis il les attribue à son nouveau propriétaire.
+ Quand une transaction est validée, elle à bel et bien eu lieu.
+\end_layout
+
+\begin_layout Standard
+Il n'existe pas qu'un seul et unique nœud pour gérer le système mais autant
+ que l'on veut.
+ Tous partagent la même base de donnée de manière synchronisée.
+ Cela renforce la fiabilité du système et augmente la vitesse de traitement
+ des transactions.
+\end_layout
+
+\begin_layout LyX-Code
+<div class="polaroid align-center"><object data="graph/node.svg" width="80%"
+ type="image/svg+xml"></object><div class="fig_comment">Réseau de nœuds</div></d
+iv>
+\end_layout
+
+\begin_layout Subsection
+Choix techniques
+\end_layout
+
+\begin_layout Subsubsection
+Des pièces de monnaie numériques
+\end_layout
+
+\begin_layout Standard
+Chaque unité d'échanges est identifiée de manière unique, chacune est liée
+ à un propriétaire unique.
+ Ces "pièces numériques" sont techniquement disponibles en différentes tailles
+ multiples de 2 XX: 1 2 4 8 16 20.
+ 
+\end_layout
+
+\begin_layout Standard
+Ce choix provient d'un soucis d'optimisation de l'espace de stockage sur
+ les nœuds.
+ Quelle que soit la valeur d'une pièce elle occupe le même espace de mémoire.
+ Or les prix sont relatifs et ils pourraient parfaitement s'exprimer en
+ centaines voir en milliers d'unités dans une zone monétaire.
+ Des pièces de valeurs plus élevées sont alors mieux adaptées techniquement.
+\end_layout
+
+\begin_layout Standard
+Un compte fonctionne comme un porte-monnaie qui contient des pièces numériques.
+ En pratique l'usager n'a pas à s'en inquiéter, il n'a pas besoin de choisir
+ quelles pièces il souhaite envoyer lors d'un payement.
+ Mais il reçoit bel est bien des pièces, elles sont identifiées de manière
+ unique et stockées sur ses outils de payement: application smartphone,
+ ordinateur personnel,...
+ 
+\end_layout
+
+\begin_layout Standard
+Alors si un moyen de payement est perdu, les pièces sont perdu.
+ Mais ce n'est pas grave car n'importe quel nœud est capable de retrouver
+ les pièces qui vous appartiennent et de vous les redonner.
+ Vous ne risquez donc pas de perdre votre argent.
+\end_layout
+
+\begin_layout Subsubsection
+Les comptes sont des "clés"
+\end_layout
+
+\begin_layout Standard
+Pour obtenir un compte il suffit de le créer puis de demander à être reconnu
+ par un ou plusieurs membres actuels de la communauté monétaire.
+ Il est possible de régler très finement les critères de reconnaissance:
+ 1 personne me reconnaît, ou 3 personnes, ou 3 personnes qui ne connaissent
+ pas entre elles, ou 20 personnes, ...
+ Le compte ne serra activé que lorsque les critères seront remplis.
+\end_layout
+
+\begin_layout Standard
+En pratique obtenir un compte revient à obtenir une "clé" (ou certificat
+ numérique).
+ Cette clé est celle de son compte principal.
+ Elle permet de créer d'autres comptes nous appartenant: un compte que l'on
+ place sur son smartphone pour pouvoir payer partout, un compte d'épargne,
+ un compte pour une entreprise, un compte pour lancer un projet public,
+ ...
+\end_layout
+
+\begin_layout Standard
+Ensuite lorsque je souhaite effectuer un payement: je crée un "bon de payement
+ numérique"; je le "signe" à l'aide de la "clé" du compte; je l'envoie au
+ nœud.
+\end_layout
+
+\begin_layout Standard
+Du point de vu de l'ordinateur, "signer" signifie que l'on encrypte le bon
+ à l'aide d'un certificat XXX bit -- XX fois plus que les certificats les
+ plus répandus.
+\end_layout
+
+\begin_layout Subsubsection
+Traitements par les nœuds 
+\end_layout
+
+\begin_layout Standard
+Lorsqu'un nœud reçoit une demande de versement: il reçoit un "bon" crypté,
+ ce "bon" est illisible mais le nœud connaît son émetteur.
+ Et il possède en mémoire une clé qui lui permet de décrypter les bons émis
+ par cette personne là.
+ Il peut donc décrypter puis traiter ce bon.
+\end_layout
+
+\begin_layout Standard
+Pour chacun des membres de la communauté un nœud possède une clé différente
+ et unique.
+ Il est donc capable de décrypter les bons, émetteur par émetteur.
+ Si le produit du décryptage est conforme il peut donc attester que l'émetteur
+ du "bon" est bien le véritable propriétaire du compte.
+ Il vérifie en plus que les pièces annoncées sont bien en sa possession.
+\end_layout
+
+\begin_layout Standard
+C'est un système extrêmement sûr et robuste, sans équivalent de sécurité
+ dans les systèmes de payements actuels.
+\end_layout
+
+\begin_layout Quotation
+get_image_in_langage("graph/pay1","svg","80%",printf(_("A gives money to
+ B (mode1 transaction)")) );
+\end_layout
+
+\begin_layout Quotation
+get_image_in_langage("graph/pay2","svg","80%",printf(_("A gives money to
+ B (mode2 transaction)")) );
+\end_layout
+
+\begin_layout Subsubsection
+Communication entre nœuds
+\end_layout
+
+\begin_layout Standard
+Lorsqu'un nœud collecte une transaction il en informe immédiatement deux
+ autres nœuds.
+ Puis chacun informe à son tour deux autres nœuds, et ainsi de suite.
+ C'est une propagation à vitesse exponentielle.
+ Chaque nœud connaît à l'avance ceux qu'il doit prévenir.
+ Si un nouveau nœud apparaît, de nouvelles règles sont calculées automatiquement.
 \end_layout
 
 \begin_layout LyX-Code
@@ -319,6 +403,68 @@ mg src="graph/node1.svg"/></li><li><img src="graph/node2.svg" width="80%"
  /></li><li><img src="graph/node3.svg" width="80%" /></li><li><img src="graph/nod
 e4.svg" width="80%" /></li><li><img src="graph/node5.svg" width="80%"/></li></ul><
 /div>
+\end_layout
+
+\begin_layout Subsection
+Choix monétaires
+\end_layout
+
+\begin_layout Subsubsection
+Théorie monétaire
+\end_layout
+
+\begin_layout Standard
+Afin de ne pas reproduire pour la énième fois les erreurs du passé, un accent
+ tout particulier a été mis sur le choix du système monétaire et sur l'étude
+ ses impacts économiques.
+ 
+\end_layout
+
+\begin_layout Standard
+La théorie monétaire qui a été retenue est la Théorie Relative de la Monnaie.
+ Sur les grands principes: 
+\end_layout
+
+\begin_layout Itemize
+chaque homme est égal devant la création monétaire; 
+\end_layout
+
+\begin_layout Itemize
+la création monétaire est répartie directement et équitablement entre tous
+ les hommes; 
+\end_layout
+
+\begin_layout Itemize
+au cours de sa vie chaque homme reçoit la même proportion de monnaie émise
+ par création monétaire, et ce quelle que soit la génération dont il est
+ issu;
+\end_layout
+
+\begin_layout Itemize
+le fruit de la création monétaire devrait pouvoir offrir à chacun un revenu
+ décent, un revenu de base.
+\end_layout
+
+\begin_layout Standard
+La formule de création monétaire tient compte:
+\end_layout
+
+\begin_layout Itemize
+du nombre d'usagers (lorsque le nombre d'usagers augmente de la monnaie
+ est automatiquement créée); 
+\end_layout
+
+\begin_layout Itemize
+de la masse monétaire du moment; 
+\end_layout
+
+\begin_layout Itemize
+d'un revenu de base minimum garanti.
+\end_layout
+
+\begin_layout Standard
+Il n'y a pas de destruction monétaire prévue ou nécessaire.
+ 
 \end_layout
 
 \begin_layout Section
@@ -584,154 +730,6 @@ using any XMPP client.
 \begin_layout Standard
 Recommended XMPP clients: <a href="http://gajim.org/">Gajim</a>, <a href="http://
 psi-plus.com/">PSI+</a>.
-\end_layout
-
-\begin_layout Section
-FAQ
-\end_layout
-
-\begin_layout Subsubsection
-What are the step needed to join an Open-UDC community ?
-\end_layout
-
-\begin_layout Itemize
-Create a OpenPGP key with an UDID2 OpenUDC comment.
- (see GLUD at <a href ="http://node1.openudc.org:11371/udid2/" >http://node1.openud
-c.org:11371/udid2/</a> )
-\end_layout
-
-\begin_layout Itemize
-Your key must be signed by 5 or more known yet registered users within the
- community (at least enough to be valid with GnuPG's default criteria)
-\end_layout
-
-\begin_layout Itemize
-You learn to use LUD or GLUD client to connect to a LUDD node.
-\end_layout
-
-\begin_layout Itemize
-You are in.
-\end_layout
-
-\begin_layout Subsubsection
-What mean M, N, c in OpenUDC concepts ?
-\end_layout
-
-\begin_layout Standard
-M or M(t) means the whole monetary Mass, the sum of all unit coins within
- the community at the date "t".
- N or N(t) mean the total of registered users inside the community at the
- date "t".
- The parameter "c" is used as the &#37; of monetary mass growth per time
- unit (ex : &#37; per year or &#37; per month).
-\end_layout
-
-\begin_layout Subsubsection
-What are LUD, GLUD, LUDD, UDID2 ?
-\end_layout
-
-\begin_layout Itemize
-LUDD is the free software that run an OpenUDC P2P node.
-\end_layout
-
-\begin_layout Itemize
-LUD is the free software OpenUDC standard client.
- LUD means "LUD Universal Dividend" able to connect to a LUDD node.
- You must install LUD on your own machine.
-\end_layout
-
-\begin_layout Itemize
-GLUD is a graphical web interface for LUD with a development version here
- : http://node1.openudc.org:11371/udid2/ 
-\end_layout
-
-\begin_layout Itemize
-UDID2 is OpenUDC information needed to add to OpenPGP keys to become candidate
- to OpenUDC PGP keys.
- (see more information in technical specficications for developpers).
-\end_layout
-
-\begin_layout Subsubsection
-What are the rules of OpenUDC Universal Dividend creation ?
-\end_layout
-
-\begin_layout Standard
-The rules for the development standard are defined as a time function UD(t),
- defined following Relative Money Theory (TRM in french) as a differential
- dividend (dividend must change with only differential small changes) :
- 
-\end_layout
-
-\begin_layout Itemize
-UD(0) = 100 Q 
-\end_layout
-
-\begin_layout Itemize
-UD(t+1) = MAX [UD(t) ; c*M(t)/N(t)]
-\end_layout
-
-\begin_layout Standard
-Where "t" is the past month.
- UD(t) is the UD of past month.
- "c" is the minimal &#37; UD growth as defined in the 4th rule.
- M(t) is the existing monetary mass, and N(t) is the total amount of members.
- All are values just before calculation of new monthly UD(t+1):
-\end_layout
-
-\begin_layout Itemize
-c = ln(ev:2) / (ev:2)
-\end_layout
-
-\begin_layout Standard
-c is defined here as the quantitative average monetary mass growth based
- on human average life expectancy.
- For a 80 years average life expectancy we have:
-\end_layout
-
-\begin_layout Itemize
-c = ln(40) / 40 = 9&#37; / year.
-\end_layout
-
-\begin_layout Standard
-As those rules are parameters of OpenUDC, one community can use OpenUDC
- with other set of rules.
- OpenUDC is totally independant of the rules chosen by a money community.
- 
-\end_layout
-
-\begin_layout Subsubsection
-Why OpenUDC contributors say "there is no inflation" since we have a Monetary
- growth ?
-\end_layout
-
-\begin_layout Standard
-Because inflation is a false conclusion due to ignorance relativaly to a
- bad unit of money because the Quantative units of money growth due to Universal
- Dividend is not the Relative one.
- 
-\end_layout
-
-\begin_layout Standard
-An OpenUDC community use the relative unit 1 UD, and not the quantitative
- 1 Q.
- So there is still in the money system the same number of money units N
- / c UD.
- And then the number of UD money units only depend of the number of members,
- and the average amount of money per member is always fix or limited by
- 1 / c UD.
-\end_layout
-
-\begin_layout Standard
-So inflation is not a problem in Universal Dividend money system, because
- there is Quantitave creation but not Relative money creation and we count
- in number of Universal Dividend, the Relative Unit.
- 
-\end_layout
-
-\begin_layout Standard
-Inflation is only a problem in non-free money system when some individuals
- create money for their own benefit and to the detriment of others, and
- so the problem is due to that non-free money model.
 \end_layout
 
 \end_body
