--- a/site1-1.lyx
+++ b/site1-1.lyx
@@ -8,7 +8,7 @@
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
-\language british
+\language english
 \language_package default
 \inputencoding auto
 \fontencoding global
@@ -92,16 +92,16 @@ ptitle=OpenUDC project
 \end_layout
 
 \begin_layout Verse
-description=The OpenUDC free money
+description=OpenUDC
 \end_layout
 
 \begin_layout Verse
-keywords=money,free money,digital money,universal dividend money,bitcoin
+keywords=monnaie,free money,universal dividend money system
 \end_layout
 
 \begin_layout Standard
 OpenUDC is a set of free softwares designed to create a free money system
- based on a decentralized human P2P network.
+ based on a decentralised human P2P network.
 \end_layout
 
 \begin_layout Standard
@@ -141,8 +141,8 @@ OpenUDC development chosen rule is described in the FAQ.
 \end_layout
 
 \begin_layout Standard
-OpenUDC allow each community who want to use its own free money to describe
- its own Universal Dividend set of rules.
+OpenUDC allow each community who want to use it's own free money to describe
+ it's own Universal Dividend set of rules.
 \end_layout
 
 \begin_layout Subsubsection
@@ -166,15 +166,15 @@ enPGP">OpenPGP</a>.
 
 \begin_layout Standard
 A new member entering the money system has to be signed by a determined
- (parameter of the money system) number of existing members.
- A member yet existing in the money system has to renew periodically signing
+ (paramater of the money system) number of existing members.
+ A member yet existing in the money system has to renew periodicly signing
  in a period of time (other parameter of the money system), as a renewable
  proof of life.
  
 \end_layout
 
 \begin_layout Standard
-So there is no center, no centralized organism in an OpenUDC money system.
+So there is no center, no centralised organism in an OpenUDC money system.
 \end_layout
 
 \begin_layout Subsubsection
@@ -183,7 +183,7 @@ Exchanges
 
 \begin_layout Standard
 Exchanges are made directly from person to person in "digital coins".
- The sender announce to the system the amount and the receiver, he signs
+ The sender announce to the system the amount and and the receiver, he signs
  it, and then send it to one node.
  The node makes a propagation of the information, and when the whole system
  fully validate the transaction, the receiver has the information.
@@ -203,11 +203,11 @@ OpenUDC nodes
 
 \begin_layout Standard
 A node is an instance of OpenUDC software, connected to other nodes.
- All those P2P connected nodes know the OpenUDC Web of Trust, and share
- the same database in a synchronized way.
+ All thoses P2P connected nodes know the OpenUDC Web of Trust, and share
+ the same database in a synchronised way.
  So the database itself is a P2P shared database containing the whole Monetary
  Mass.
- So each member of an OpenUDC money system can have its own node and own
+ So each member of an OpenUDC money system canhave it's own node and own
  copy of the updated OpenUDC Web of Trust and OpenUDC Monetary Mass.
  
 \end_layout
@@ -235,15 +235,15 @@ Each digital coin is identified in an unique way.
  owner of that coin.
  These digital coins are technically available in different sizes as powers
  of 2 : 2^0, or 2^1, or 2^2, 2^3 etc...
- This choice is due to optimization of memory space, and also due to growing
+ This choice is due to optimisation of memory space, and also due to growing
  quantitative monetary mass.
  
 \end_layout
 
 \begin_layout Standard
 Note1 : OpenUDC system has to show always the information on a relative
- units, so quantitative units can be seen only for technical base.
- On its own account a member has a number a quantitative units Q, he can
+ units, so quantative units can be seen only for technical base.
+ On it's own account a member has a number a quantitive units Q, he can
  count on number of Universal Dividend making the calculation account :
  Q / UD.
 \end_layout
@@ -269,9 +269,9 @@ Accounts are "keys"
 \begin_layout Standard
 To obtain an account, it is enough to create it, and then to be signed by
  a determined number of existing members.
- Account will be activated only when the system rules will be fully OK.
- Practically you create an OpenUDC WoT private key, and an OpenUDC WoT public
- key, associated with a specific OpenUDC information named UDID2 information.
+ Account will be activated only when the system rules will be fully ok.Practicall
+y you create an OpenUDC WoT private key, and an OpenUDC WoT public key,
+ associated with a specific OpenUDC information named UDID2 information.
  
 \end_layout
 
@@ -280,7 +280,7 @@ With those keys you can access to transactions of your own account, send
  to or receive from others.
  You sign and encrypt a "digital order" to send, and then the node recognise
  you, and make the job.
- When it's fully OK, the receiver has the complete information and some
+ When it's fully ok, the receiver has the complete information and some
  digital coins have change of owner.
  Work of the nodes When a node receive an encrypted "digital order" it recognise
 d the sender, and he is able to decrypt it and work on it.
@@ -354,7 +354,7 @@ wget https://github.com/Open-UDC/open-udc/archive/v0.2.0.tar.gz
 \end_layout
 
 \begin_layout Subsubsection
-Install Lud: OpenUDC command line client
+Install Lud: OpenUDC Client
 \end_layout
 
 \begin_layout Standard
@@ -387,11 +387,12 @@ lud.sh
 
 \begin_layout Itemize
 It asks you informations (place of birth, date of birth, last name, first
- name) in order to generate a unique ID for your key.
+ name) in order to generate a UDID2 certificate needed to be with you unique
+ OpenGPG/OpenUDC key ID.
 \end_layout
 
 \begin_layout Itemize
-When your key is generated, it shows a menu.
+When your certificate is generated, it shows a menu.
  
 \end_layout
 
@@ -400,7 +401,9 @@ Choose 1 to share your KEY with an OpenUDC community Node
 \end_layout
 
 \begin_layout Standard
-Launching the program "seahorse" you can see your key.
+Launching the program "seahorse" you can check your unique UDID2-OpenUDC
+ key is on the window "My personals keys".
+ 
 \end_layout
 
 \begin_layout Subsubsection
@@ -468,6 +471,27 @@ You can check your local adress : http://127.0.0.1:11371/ and so access to
  your OpenUDC LUDD node 
 \end_layout
 
+\begin_layout Standard
+You can always retrying the process of compiling / installing with the commands
+ :
+\end_layout
+
+\begin_layout Quote
+sudo make distclean 
+\end_layout
+
+\begin_layout Quote
+./configure &amp;&amp; make 
+\end_layout
+
+\begin_layout Quote
+sudo make uninstall
+\end_layout
+
+\begin_layout Quote
+sudo make install
+\end_layout
+
 \begin_layout Section
 Contribute
 \end_layout
@@ -481,8 +505,7 @@ description=How to contribute to OpenUDC
 \end_layout
 
 \begin_layout Verse
-keywords=contribute,contributor,open-source,github,developer,develop,program,pro
-grammer
+keywords=contribute,developer
 \end_layout
 
 \begin_layout Subsection
@@ -492,7 +515,8 @@ Contribute to OpenUDC
 \begin_layout Standard
 The project is still young, we need a lot of contributors for improving
  it.
- Feel free to join our developer and user community.
+ Feel free to join our developer and user community in using the following
+ ways.
 \end_layout
 
 \begin_layout Subsubsection
@@ -561,8 +585,20 @@ clicking on Discussion in the bottom right hand corner of the OpenUDC web
 \end_layout
 
 \begin_layout Itemize
-use a XMPP client like <a href="http://gajim.org/">Gajim</a> or <a href="http://p
-si-plus.com/">PSI+</a>.
+using the Jabber compatible web-client Jappix;
+\end_layout
+
+\begin_layout Itemize
+using MiniJappix on your own site;
+\end_layout
+
+\begin_layout Itemize
+install and use a free XMPP client (probably the best way).
+\end_layout
+
+\begin_layout Standard
+Recommended XMPP clients: <a href="http://gajim.org/">Gajim</a>, <a href="http://
+psi-plus.com/">PSI+</a>.
 \end_layout
 
 \begin_layout Section
@@ -578,7 +614,7 @@ description=Frequently asked questions
 \end_layout
 
 \begin_layout Verse
-keywords=faq,openudc
+keywords=faq,developer,contact
 \end_layout
 
 \begin_layout Subsection
@@ -590,9 +626,9 @@ What are the step needed to join an Open-UDC community ?
 \end_layout
 
 \begin_layout Enumerate
-Create a OpenPGP key with the Open-UDC command line client.
- Also you can use "gpg" with a special <a href ="http://node1.openudc.org:11371/ud
-id2/" >OpenUDC UDID2</a>.
+Create a OpenPGP key with an UDID2 OpenUDC comment.
+ (see GLUD at <a href ="http://node1.openudc.org:11371/udid2/" >http://node1.openud
+c.org:11371/udid2/</a> )
 \end_layout
 
 \begin_layout Enumerate
@@ -630,7 +666,7 @@ LUDD is the free software that run an OpenUDC P2P node.
 \end_layout
 
 \begin_layout Itemize
-LUD is the free software OpenUDC standard command line client.
+LUD is the free software OpenUDC standard client.
  LUD means "LUD Universal Dividend" able to connect to a LUDD node.
  You must install LUD on your own machine.
 \end_layout
@@ -643,7 +679,7 @@ GLUD is a graphical web interface for LUD with a development version here
 \begin_layout Itemize
 UDID2 is OpenUDC information needed to add to OpenPGP keys to become candidate
  to OpenUDC PGP keys.
- (see more information in technical specifications for developers).
+ (see more information in technical specficications for developpers).
 \end_layout
 
 \begin_layout Subsubsection
@@ -701,7 +737,7 @@ Why OpenUDC contributors say "there is no inflation" since we have a Monetary
 \end_layout
 
 \begin_layout Standard
-Because inflation is a false conclusion due to ignorance relatively to a
+Because inflation is a false conclusion due to ignorance relativaly to a
  bad unit of money because the Quantative units of money growth due to Universal
  Dividend is not the Relative one.
 \end_layout
@@ -712,13 +748,13 @@ An OpenUDC community use the relative unit 1 UD, and not the quantitative
  So there is still in the money system the same number of money units N
  / c UD.
  And then the number of UD money units only depend of the number of members,
- and the average amount of money per member is always fixed or limited by
+ and the average amount of money per member is always fix or limited by
  1 / c UD.
 \end_layout
 
 \begin_layout Standard
 So inflation is not a problem in Universal Dividend money system, because
- there is Quantitative creation but not Relative money creation and we count
+ there is Quantitave creation but not Relative money creation and we count
  in number of Universal Dividend, the Relative Unit.
  
 \end_layout
