--- a/site.lyx
+++ b/site.lyx
@@ -167,7 +167,10 @@ enPGP">OpenPGP</a>.
 \begin_layout Standard
 A new member entering the money system has to be signed by a determined
  (parameter of the money system) number of existing members.
- A member yet existing in the money system has to renew periodically signing
+\end_layout
+
+\begin_layout Standard
+A member yet existing in the money system has to renew periodically signing
  in a period of time (other parameter of the money system), as a renewable
  proof of life.
  
@@ -207,8 +210,11 @@ A node is an instance of OpenUDC software, connected to other nodes.
  the same database in a synchronized way.
  So the database itself is a P2P shared database containing the whole Monetary
  Mass.
- So each member of an OpenUDC money system can have its own node and own
- copy of the updated OpenUDC Web of Trust and OpenUDC Monetary Mass.
+\end_layout
+
+\begin_layout Standard
+Each member of an OpenUDC money system can have its own node and own copy
+ of the updated OpenUDC Web of Trust and OpenUDC Monetary Mass.
  
 \end_layout
 
@@ -241,25 +247,8 @@ Each digital coin is identified in an unique way.
 \end_layout
 
 \begin_layout Standard
-Note1 : OpenUDC system has to show always the information on a relative
- units, so quantitative units can be seen only for technical base.
- On its own account a member has a number a quantitative units Q, he can
- count on number of Universal Dividend making the calculation account :
- Q / UD.
-\end_layout
-
-\begin_layout Standard
-In relative units the monetary Mass don't grow in number of UD units, there
- is always a maximum average of 1 / c Universal Dividend per member, so
- in the relative unit UD there is not really monetary growth.
-\end_layout
-
-\begin_layout Standard
-Note2 : The OpenUDC digital coins are all in the P2P shared database, and
- so there is no possibility for those coins to be lost (you could lose your
- private OpenUDC Web of Trust Key, but that problem can be solved by other
- ways than the OpenUDC system itself).
- 
+The OpenUDC digital coins are all in the P2P shared database, and so there
+ is no possibility for those coins to be lost.
 \end_layout
 
 \begin_layout Subsubsection
